--- a/biologia2.html
+++ b/biologia2.html
@@ -313,7 +313,54 @@
     <br><br><br>
     
     V.M.NOTICIA.
-    
+    <br><br><br><br><br>
+
+    FIBROSIS QUISTICA.
+    <br><br>
+    <div class="imagenbiolo"></div>
+  
+
+La fibrosis quistica es una enfermedad genetica hereditaria, causada por la mutacion de un gen, mas esfecificamente el
+gen que da lugar a la proteina CFTR en sus silavas en ingles, en español, reguladora de la conductancia transmembraria de
+la fibrosis quistica, se encarga de regular la cantidad de cloruro que entra y sale de las celulas, esto provoca que el
+cuerpo produzca una cantidad anormal de moco, el cual es mucho mas espeso y pegajoso de lo normal, esto afecta principalmente 
+a los pulmones, al sistema digestivon y al sistema reproductor.
+<br><br>
+Para entender mejor en que afecta esta mocosidad, hay que saber que nustros pulmones estan cubiertos de moco, este
+ayuda a atrapar germenes del exterior, en este punto entran en accion los cilios, estos son pequeñas estructuras en forma
+de pelitos que se mueven y ayudan a expulsar el moco, sin embargo, en el caso de aquellos que padecen fibrosis
+quistica, a comparacion de el moco comun, el de ellos es mucho mas espeso y pegajoso, esto hace que los cilios se
+queden atrapados sin poder moverse y expulsar el moco, provocando la acumulacion de moco y la obstruccion de las
+vias respiratorias. Como es mensionado antes, el moco atrapa los germenes para luego expulsarlos, pero en este caso el
+moco en lugar de ser expulsado se acumula, esto provoca la aparicion de infecciones respiratorias, esta es la razon por la 
+cual los quisticos suelen tomar gran variedad de antivioticos. a menudo estas infecciones causan varios sintomas molestos,
+como por ejemplo sibilancias, tos permanente, sinusitis, etc. Una curiosidad sobre la fibrosis quistica, es que se les
+recomienda no estar cerca de otro quisticos, esto debido a que se puede dar lo llamado indeccion cruzada, es decir, que
+una persona quistica le transmita la bacteria a otra, debido a esto la minima distancia entre dos quistico es apartir de los
+dos metros. La fibrosis quistica mas alla de afectar a los pulmosnes, tambien afecta otros organos importantes, como
+por ejemplo el pancreas. El pancreas es el encargado de secretar sustancias que ayudan a descomponer la comida
+para que el intestino pueda absorverlos, sin embargo este moco bloquea las vias por las cuales pasan aquellas
+sustancias, debido es esto el intestino es incapas de absorver correctamente los alimentos, por esto es que a
+menudo los quisticos padecen de bajo peso, lo que los con lleva a llevar una dieta alta en grasas para mantener un peso
+sano.
+<br><br>
+
+
+
+
+La fibrosis quistica puede ser detectada incluso a partir del nacimiento, un bebe que sufre de esta enfermedad suele
+tardar en evacuar por primera vez, esto a causa de la mococidad que se acumula en el intestino, obstruyendo la
+salida de las esces y el moco. esto fundamenta gran variedad de sintomas molestos, como por ejemplo inchazon en el
+vientre, vomito y dificultad para evacuar, lo que puede llevar hasta la cirugia.
+<br><br>
+Actualmente no existe ninguna cura para esta, sin embargo hay gran variedad de tratamietos, hay que tener en cuenta
+que cada persona tiene afecciones diferentes, desde presentar sintomas leves o ningun sintoma, hasta llegar a
+sintomas mortales, teniendo en cuenta esto se escoge el tratamiento que mas se adapte. Otra alternativa es el
+transplante de pulmon, este no supone una cura pero si un alivio realmente notorio, aunque estos solo tienen una
+durabilidad de 5 años.
+<br><br><br><br>
+V.M.NOTICIA.
+
 
 
 
